# team-cfc

./: .gitignore  ARCHITECTURE.md  README.md
.claude/: launch.json
backend/: main.py  pyproject.toml
frontend/: .npmrc  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/insights/: route.ts
frontend/app/api/recommendations/: route.ts
frontend/app/api/submissions/: route.ts
frontend/app/dashboard/: page.tsx
frontend/app/submit/: page.tsx
frontend/components/: DashboardClient.tsx  HotspotMap.tsx  LandingPage.tsx  SubmissionPage.tsx
frontend/lib/: extract.ts  llm.ts  supabase.ts
frontend/scripts/: seed.ts
supabase/: config.toml
supabase/migrations/: 20260705000000_init.sql
