[project]
name = "cfc-backend"
version = "0.1.0"
description = "CFC - Citizen Feedback for Communities backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "supabase>=2.9",
    "sentence-transformers>=3.3",
    "openai>=1.56",
    "python-multipart>=0.0.18",
    "httpx>=0.27",
    "numpy>=2.0",
]
